--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,31 @@
-# QWED Environment Variables
-# Copy this file to .env and fill in your values
+# =======================================================
+# QWED Environment Configuration (Example)
+# Copy this file to .env and replace with your actual keys
+# =======================================================
 
-# Active LLM Provider (azure_openai, anthropic, claude_opus)
-ACTIVE_PROVIDER=azure_openai
+# 1. Azure OpenAI (Primary Provider)
+# Required for: Translation Layer (GPT-4)
+AZURE_OPENAI_ENDPOINT="https://your-resource.openai.azure.com/"
+AZURE_OPENAI_API_KEY="your_azure_api_key_here"
+AZURE_OPENAI_DEPLOYMENT="gpt-4-turbo"
+AZURE_OPENAI_API_VERSION="2024-02-15-preview"
 
-# Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-api-key-here
-AZURE_OPENAI_DEPLOYMENT=gpt-4
-AZURE_OPENAI_API_VERSION=2024-02-15-preview
+# 2. Anthropic (Secondary Provider)
+# Required for: Fallback & Logic Puzzles
+ANTHROPIC_ENDPOINT="https://api.anthropic.com/v1"
+ANTHROPIC_API_KEY="your_anthropic_api_key_here"
+ANTHROPIC_DEPLOYMENT="claude-3-opus-20240229"
 
-# Anthropic Configuration (via Azure AI Foundry)
-ANTHROPIC_ENDPOINT=https://your-resource.services.ai.azure.com/anthropic/
-ANTHROPIC_API_KEY=your-api-key-here
-ANTHROPIC_DEPLOYMENT=claude-sonnet-4-5
+# 3. Old Claude Provider (Deprecated)
+CLAUDE_OPUS_ENDPOINT="https://api.anthropic.com/v1"
+CLAUDE_OPUS_API_KEY="your_claude_key_here"
+CLAUDE_OPUS_DEPLOYMENT="claude-3-opus-20240229"
 
-# Claude Opus Configuration
-CLAUDE_OPUS_ENDPOINT=https://your-resource.services.ai.azure.com/anthropic/
-CLAUDE_OPUS_API_KEY=your-api-key-here
-CLAUDE_OPUS_DEPLOYMENT=claude-opus-4-5
+# 4. QWED Internal Keys
+# Required for: Authentication
+QWED_API_KEY="test_key_for_local_development"
+DATABASE_URL="sqlite:///./qwed.db"
 
-# Database (optional - defaults to SQLite)
-DATABASE_URL=sqlite:///./qwed.db
+# 5. Agent Settings
+# Controls for Agent Budgeting
+MAX_DAILY_COST=10.0
