Enterprise Upgrades: PostgreSQL, Financial Precision, Z3 Counter-Models

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,13 @@ CLAUDE_OPUS_DEPLOYMENT="claude-3-opus-20240229"
 # 4. QWED Internal Keys
 # Required for: Authentication
 QWED_API_KEY="test_key_for_local_development"
+
+# 4a. Database (SQLite - Development)
 DATABASE_URL="sqlite:///./qwed.db"
+
+# 4b. Database (PostgreSQL - Production)
+# Uncomment below and comment SQLite for production
+# DATABASE_URL="postgresql://qwed:qwed_secret@localhost:5432/qwed_db"
 
 # 5. Agent Settings
 # Controls for Agent Budgeting
