--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "python-multipart>=0.0.6",
     "pandas>=2.0.0",
     "numpy>=1.24.0",
-    "scipy>=1.10.0"
+    "scipy>=1.10.0",
+    "psycopg2-binary>=2.9.9"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
