Debug CI: Add dependency check & verbose tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,14 @@ jobs:
         pip install -e .
         pip install pytest pytest-asyncio
 
+    - name: Check Dependencies
+      run: |
+        python -c "import sqlglot; print('SQLGlot version:', sqlglot.__version__)"
+        python -c "import qwed_new; print('Package qwed_new imported successfully')"
+
     - name: Run Tests
       env:
         DATABASE_URL: postgresql://qwed:qwed_secret@localhost:5432/qwed_db
         ACTIVE_PROVIDER: mock
       run: |
-        pytest
+        pytest -v
