--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "sqlglot>=20.0.0",
     "requests>=2.31.0",
-    "PyYAML>=6.0.1"
+    "PyYAML>=6.0.1",
+    "matplotlib>=3.7.0",
+    "docker>=7.0.0"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
