--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,11 @@ dependencies = [
     "PyYAML>=6.0.1",
     "matplotlib>=3.7.0",
     "docker>=7.0.0",
-    "locust>=2.24.0"
+    "locust>=2.24.0",
+    "pytest-timeout>=4.0.0",
+    "pytest-xdist>=3.5.0",
+    "jinja2>=3.1.3",
+    "freezegun>=1.4.0"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
