feat: Add complete observability stack - OpenTelemetry, Prometheus, Grafana

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,14 @@ MAX_DAILY_COST=10.0
 REDIS_URL="redis://localhost:6379/0"
 REDIS_MAX_CONNECTIONS=10
 REDIS_SOCKET_TIMEOUT=5.0
+
+# 7. OpenTelemetry (Distributed Tracing)
+# Required for: Production observability
+OTEL_ENABLED=true
+OTLP_ENDPOINT="http://localhost:4317"
+OTEL_SERVICE_NAME="qwed-api"
+ENVIRONMENT="development"
+
+# 8. Grafana (Dashboards)
+# Access at: http://localhost:3000
+# Default credentials: admin / qwed_admin
