--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,13 @@ dependencies = [
     "pytest-xdist>=3.3.0",
     "jinja2>=3.1.3",
     "freezegun>=1.4.0",
-    "redis>=5.0.0"
+    "redis>=5.0.0",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "opentelemetry-instrumentation-fastapi>=0.41b0",
+    "opentelemetry-instrumentation-requests>=0.41b0",
+    "prometheus-client>=0.19.0"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
