--- a/docs-site/blog/authors.yml
+++ b/docs-site/blog/authors.yml
@@ -2,7 +2,7 @@ rahul:
   name: Rahul Dass
   title: Founder @ QWED-AI
   url: https://github.com/rahul-dass
-  image_url: https://github.com/rahul-dass.png
+  image_url: /img/rahul.jpeg
 
 qwed:
   name: QWED Team
