fix: correct PyPI project URLs to qwedai.com
- Homepage: qwed.ai  qwedai.com
- Documentation: docs.qwed.ai  docs.qwedai.com
- Fixes PyPI project page links

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,8 @@ requires-python = ">=3.10"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://qwed.ai"
-Documentation = "https://docs.qwed.ai"
+Homepage = "https://qwedai.com"
+Documentation = "https://docs.qwedai.com"
 Repository = "https://github.com/QWED-AI/qwed-verification"
 Changelog = "https://github.com/QWED-AI/qwed-verification/blob/main/CHANGELOG.md"
 
