--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "anthropic>=0.1.0",
     "python-dotenv>=1.0.0",
     "sympy>=1.12",
+    "click>=8.1.0",  # CLI framework
     "z3-solver>=4.12.0",
     "networkx>=3.0",
     "sqlmodel>=0.0.14",
