chore: Update FUNDING.yml to QWED organization
- Change GitHub Sponsors from rahuldass19 to QWED-AI
- Sponsor button now points to organization sponsorship
- 8 tiers available from -/month

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # GitHub Sponsors
-github: [rahuldass19]
+github: [QWED-AI]
 
 # These are supported funding model platforms
 # patreon: # Replace with a single Patreon username
