--- a/.github/workflows/qwed-action-example.yml
+++ b/.github/workflows/qwed-action-example.yml
@@ -1,10 +1,11 @@
 name: QWED Verification Example
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:  # Manual trigger only
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
 
 jobs:
   verify-math:
