--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,13 @@ dev = [
     "pyyaml>=6.0.1",
 ]
 
+
+pii = [
+    "presidio-analyzer>=2.2",
+    "presidio-anonymizer>=2.2",
+    "spacy>=3.7"
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
