--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -29,22 +29,23 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install Snyk CLI
+        run: npm install -g snyk
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[full]"
 
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@v1.0.0
-        continue-on-error: true  # Don't fail build on vulnerabilities
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high --sarif-file-output=snyk.sarif
+        run: snyk test --severity-threshold=high --sarif-file-output=snyk.sarif
 
       - name: Upload Snyk results to GitHub Security
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: always() && hashFiles('snyk.sarif') != ''
         with:
           sarif_file: snyk.sarif
 
@@ -54,17 +55,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install Snyk CLI
+        run: npm install -g snyk
+
       - name: Run Snyk Code test
-        uses: snyk/actions/python@v1.0.0
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          command: code test
-          args: --sarif-file-output=snyk-code.sarif
+        run: snyk code test --sarif-file-output=snyk-code.sarif
 
       - name: Upload Snyk Code results
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: always() && hashFiles('snyk-code.sarif') != ''
         with:
           sarif_file: snyk-code.sarif
