--- a/sdk-rust/Cargo.toml
+++ b/sdk-rust/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["qwed", "verification", "ai", "llm", "trust"]
 categories = ["api-bindings", "development-tools"]
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
