--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov pytest-asyncio
+          pip install PyYAML matplotlib docker
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install -e .
           
