--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov pytest-asyncio
-          pip install PyYAML matplotlib docker
+          pip install PyYAML matplotlib docker cryptography
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install -e .
           
